backend/tmp/python/15/output.txt
  File "/app/main.py", line 1
    x=input();while true :;    print(x)
              ^^^^^
SyntaxError: invalid syntax
